Various updates: - more code cleanup - updated TOP to 4.0.2 - added in JEI (but without ghost ingredient handler for now) - build with forge 37.0.50